ci/deploy/environments/dev/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swapi-dev
  namespace: querium-swapi
  labels:
    app: swapi-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swapi-dev
  template:
    metadata:
      labels:
        app: swapi-dev
    spec:
      containers:
      - env:
        - name: SWAPI_ENVIRONMENT
          value: dev
        image: 320713933456.dkr.ecr.us-east-2.amazonaws.com/querium/swapi-dev:latest
        imagePullPolicy: Always
        name: swapi-dev
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
            requests:
              memory: 2Gi
        securityContext:
          allowPrivilegeEscalation: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /openedx/edx-platform/lms/envs/tutor/
          name: settings-lms
        - mountPath: /openedx/edx-platform/cms/envs/tutor/
          name: settings-cms
        - mountPath: /openedx/config
          name: config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
