ci/deploy/environments/dev/k8s/ingress.yml
#------------------------------------------------------------------------------
# written by: Lawrence McDaniel
#             https://lawrencemcdaniel.com
#
# date:       Sep-2022
#
# usage: setup nginx for EKS load balancer.
#        see https://cert-manager.io/docs/
#------------------------------------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swapi-dev
  namespace: querium-swapi
  labels:
    app.kubernetes.io/instance: swapi-dev
    app.kubernetes.io/name: swapi-dev
    app: swapi-dev
  annotations:
    # base annotations: pretty much all ingresses need these.
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - "dev.qq-stepwise-api.querium.com"
    - "*.dev.qq-stepwise-api.querium.com"
    secretName: wild-swapi-dev-tls
  rules:
  - host: dev.qq-stepwise-api.querium.com
    http:
      paths:
      - backend:
          service:
            name: swapi-dev
            port:
              number: 8080
        path: /
        pathType: Prefix
